<resources>
    <integer name="com_vk_sdk_AppId">7793844</integer>
    <string name="app_name">Pocket Bot</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="preous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="next_step">Дальше</string>
    <string name="welcome_title">Добро пожаловать в\nPocket Bot!</string>
    <string name="welcome_subtitle">Здесь Вы можете настроить и запустить чат-ботов для социальной сети ВКонтакте</string>
    <string name="enter">Войти</string>
    <string name="lets_start_title">Давайте начнём!</string>
    <string name="lets_start_subtitle">Для работы чат-ботов необходимо войти в аккаунт ВКонтакте и дать разрешения на использование некоторых функций</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>